--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
