--- a/angular.json
+++ b/angular.json
@@ -111,24 +111,11 @@
           "options": {
             "tsConfig": [
               "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
+              "tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "crowders-dispatcher-front:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "crowders-dispatcher-front:serve:production"
-            }
           }
         }
       }
